--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/rcl.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
@@ -51,7 +51,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>Kind Mind</title>
+    <title>Renato Cabrera | Sitio Oficial</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
